--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .main-container{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            background-color: antiquewhite;
+        }
+
+    </style>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae facere quo nobis eius numquam inventore quidem repellat aut explicabo repellendus?</p>
+    <div class="main-container">
+        <div class="half-width">
+            <h4>This is me</h4>
+            <h1>Rezaul Islam</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, nulla!</p>
+
+        </div>
+        <div class="half-width">
+            <img src="download.jpg" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
